--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>java-dotenv</artifactId>
             <version>5.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.28.0</version>
+        </dependency>
     </dependencies>
 </project>
